# PowerTunnel-Android

./: .gitignore  .project  CHANGELOG  LICENSE  README.md  build.gradle  gradle.properties  new_version.txt  settings.gradle  version.txt
app/: CMakeLists.txt  build.gradle
app/src/debug/res/drawable/: ic_launcher_foreground.xml  tv_banner_foreground.xml
app/src/debug/res/values/: ic_launcher_background.xml  tv_banner_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dhcp.c  dns.c  http.c  http.h  icmp.c  ip.c  session.c  tcp.c  tls.c  tls.h  tun2http.c  tun2http.h  udp.c  util.c
app/src/main/res/anim/: fade_out.xml
app/src/main/res/drawable/: button_outline.xml  button_outline_active.xml  button_outline_base.xml  ic_launcher_foreground.xml  ic_logo.xml  ic_logo_disabled.xml  ic_logo_not_running.xml  ic_logo_running.xml  main_progress_circle.xml  tv_banner_foreground.xml
app/src/main/res/drawable-anydpi/: ic_delete.xml  ic_download.xml  ic_globe.xml  ic_info.xml  ic_plugins.xml  ic_refresh.xml  ic_save.xml  ic_settings.xml  ic_undo.xml
app/src/main/res/drawable-anydpi-v24/: ic_download.xml  ic_notification.xml  ic_stop.xml  ic_stop_tunnel.xml
app/src/main/res/drawable-v21/: button_outline.xml  button_outline_active.xml
app/src/main/res/layout/: about_activity.xml  activity_about.xml  activity_main.xml  app_item.xml  config_edit_activity.xml  crash_activity.xml  list_activity.xml  log_activity.xml  log_line_item.xml  main_activity.xml  plugin_item.xml  settings_activity.xml  splash_activity.xml
app/src/main/res/menu/: menu_log.xml  (+6 more)
(+186 files in other folders)
